# vtt-backend

./: .gitignore  Cargo.toml
bruno/VTT/: bruno.json
bruno/VTT/DELETE/: Leave chat.bru
bruno/VTT/GET/: Dice Menu.bru  Get Chat History.bru  character menu.bru  test.bru
bruno/VTT/POST/: Chat Roll.bru  Enter Chat.bru  Export Sheet, No Credential.bru  Import Sheet, No Credential.bru  Leave chat.bru  New Message.bru  Roll dice and overflow.bru  Roll dice.bru  Roll fate dice.bru
src/: character.rs  chat.rs  dice.rs  lib.rs  main.rs  routable.rs
src/character/: api.rs  skills.rs  tests.rs
src/chat/: api.rs
src/dice/: api.rs
