[package]
name = "vtt-baxum"
description = "Axum REST API for my VTT project, caution, bad code ahead."
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.83"
axum = "0.7.5"
chrono = "0.4.38"
chrono-tz = "0.9.0"
env_logger = "0.11.3"
lazy_static = "1.4.0"
log = "0.4.21"
rand = { version = "0.8.5", features = ["serde"] }
rusqlite = { version = "0.31.0", features = ["trace", "serde_json", "bundled"] }
serde = { version = "1.0.200", features = ["derive", "rc"] }
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["cors"] }
